--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 .u-section-1 {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/56456-min.jpg');
   background-position: 50% 0%;
@@ -2531,8 +2533,6 @@ span.fr-img-caption.fr-view.fr-dii.fr-fir {
   margin: 5px 0 5px 5px;
   max-width: calc(100% - 5px);
 }
-
-@charset "UTF-8";
 
 .u-hidden-block {
   visibility: hidden !important;
@@ -28628,7 +28628,6 @@ a.pswp__share--download:hover {
 
   to {
     transform-origin: center center;
-    transform: translate3d(-50% !important, -50% !important, 0);
     opacity: 1;
   }
 }
@@ -28636,7 +28635,6 @@ a.pswp__share--download:hover {
 @keyframes customAnimationOut {
   from {
     transform-origin: center center;
-    transform: translate3d(-50% !important, -50% !important, 0);
     opacity: 1;
   }
 
@@ -53090,6 +53088,10 @@ blockquote {
 }
 
 .u-footer {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-image: none;
 }
 
