--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/56456-min.jpg');
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/home.jpg');
   background-position: 50% 0%;
 }
 
@@ -1596,7 +1596,7 @@
 }
 
 .u-section-5 {
-  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/ert.jpg');
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/end.jpg');
   background-position: 50% 50%;
 }
 
